# AEROBOT-MRAC-MTP

./: README.md  Regulated_Response.mat  TRMS_MRAC_Node.slx  mrac_design_script.mlx  pid_control_aerobot.slx
+bus_conv_fcns/+ros/+busToMsg/: RefCachedMap.mat
+bus_conv_fcns/+ros/+busToMsg/+geometry_msgs/: Pose2D.m
+bus_conv_fcns/+ros2/+busToMsg/: RefCachedMap.mat
+bus_conv_fcns/+ros2/+busToMsg/+aerobot_interfaces/: EscMsg.m
+bus_conv_fcns/+ros2/+busToMsg/+hardware_interfaces/: ArmMessageRequest.m
+bus_conv_fcns/+ros2/+busToMsg/+std_msgs/: Int64.m
+bus_conv_fcns/+ros2/+msgToBus/: RefCachedMap.mat
+bus_conv_fcns/+ros2/+msgToBus/+aerobot_interfaces/: CalibrateResponse.m
+bus_conv_fcns/+ros2/+msgToBus/+hardware_interfaces/: ArmMessageResponse.m
STL Files/: BLDC_Motor_5010_Varsayilan_sldprt.stl  BOTTOM_HINGE_V3_Default_sldprt.stl  Propeller 10x45.step_Default_sldprt.stl  TOP_HINGE_V3_Default_sldprt.stl  beam_Default_sldprt.stl  box_top_plate_Default_sldprt.step_Default_sldprt.stl  box_upper_Default_sldprt.step_Default_sldprt.stl  support_beam_Default_sldprt.stl  support_plate_Default_sldprt.stl
custom/: untitled1.slx.autosave  untitled1.slxc  untitled1.tgz
custom/+bus_conv_fcns/+ros2/+busToMsg/: RefCachedMap.mat
custom/aerobot_interfaces/: ros2_imu.slxc  ros2_imu.tgz
custom/aerobot_interfaces/ros2_imu_ert_rtw/: MW_target_hardware_resources.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  ert_main.cpp  main.cpp  multiword_types.h  ros2ModelInfo.mat  ros2_imu_dt.h  ros2_imu_private.h  ros2_imu_targ_data_map.m  ros2nodeinterface.cpp  ros2nodeinterface.h  rtw_proj.tmw  rtwtypeschksum.mat  slros2_initialize.cpp  slros2_initialize.h  slros_busmsg_conversion.cpp  slros_busmsg_conversion.h
custom/aerobot_interfaces/ros2_imu_ert_rtw/tmwinternal/: simulink_cache.xml  tr
custom/aerobot_interfaces/src/aerobot_interfaces/: CMakeLists.txt  package.xml  packageInfo.mat
custom/aerobot_interfaces/src/ros2_imu/: CMakeLists.txt  package.xml  packageInfo.mat
custom/matlab_msg_gen/win64/install/: local_setup.bat  local_setup.ps1  setup.bat  setup.ps1
custom/matlab_msg_gen/win64/log/: latest_build
custom/slprj/ert/_sharedutils/: shared_file.dmr
custom/src/aerobot_interfaces/: CMakeLists.txt  package.xml  packageInfo.mat
custom/src/untitled1/: CMakeLists.txt  package.xml  packageInfo.mat
custom/src/untitled1/include/untitled1/: rtwtypes.h  untitled1.h  untitled1_dt.h  visibility_control.h
custom/src/untitled1/src/: main.cpp  slros2_initialize.cpp  slros_busmsg_conversion.cpp
custom/untitled1_ert_rtw/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  codertarget_assembly_flags.mk  compileInfo.mat  ert_main.cpp  multiword_types.h  ros2ModelInfo.mat  ros2nodeinterface.cpp  ros2nodeinterface.h  rtmodel.h  rtw_proj.tmw  rtwtypeschksum.mat  slros2_initialize.h  slros_busmsg_conversion.h  untitled1.cpp  untitled1_data.cpp  untitled1_private.h  untitled1_targ_data_map.m  untitled1_types.h
custom/untitled1_ert_rtw/tmwinternal/: simulink_cache.xml  tr
(+64 files in other folders)
